--- a/front-end/sass/components/_textarea.scss
+++ b/front-end/sass/components/_textarea.scss
@@ -2,7 +2,7 @@ textarea {
   background-color: $c-l-3;
   width: 100%;
   height: auto;
-  font-size: 20px;
+  font-size: 16px;
   padding: 20px;
   overflow: hidden;
   resize: none;
